# Containers

./: .gitignore  CMakeLists.txt  Makefile  README_RUS.md  s21_containers.h  s21_list.cpp  s21_list.h  test.cpp
.github/workflows/: c-cpp.yml
source/: Makefile  s21_containers.h
source/list/: s21_list.h
source/queue/: queue.cc  queue.h
tests/: t_lists.cpp  test.h
